tests/paczka1/small_fuzzy/92485051.err
Error in line 1: N1zTG A651 72,7
Error in line 3: A651 S904 90,7
